.local-dev/manifest/grafana/grafana-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.local.trapti.tech`)
      services:
        - namespace: grafana
          kind: Service
          name: grafana-chart
          port: 80
          scheme: http
          strategy: RoundRobin
          weight: 1
